--- a/index.html
+++ b/index.html
@@ -67,3 +67,53 @@
             </div>
         </div>
     </section>
+<!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>I am a dedicated Computer Engineering graduate with a passion for web development and creating user-friendly applications. My goal is to utilize my interpersonal skills to achieve company objectives while maintaining a strong focus on customer satisfaction.</p>
+                    <div class="about-stats">
+                        <div class="stat">
+                            <h3>9.18</h3>
+                            <p>SGPA in BE</p>
+                        </div>
+                        <div class="stat">
+                            <h3>4+</h3>
+                            <p>Projects Completed</p>
+                        </div>
+                        <div class="stat">
+                            <h3>3</h3>
+                            <p>Internships</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>I am a dedicated Computer Engineering graduate with a passion for web development and creating user-friendly applications. My goal is to utilize my interpersonal skills to achieve company objectives while maintaining a strong focus on customer satisfaction.</p>
+                    <div class="about-stats">
+                        <div class="stat">
+                            <h3>9.18</h3>
+                            <p>SGPA in BE</p>
+                        </div>
+                        <div class="stat">
+                            <h3>4+</h3>
+                            <p>Projects Completed</p>
+                        </div>
+                        <div class="stat">
+                            <h3>3</h3>
+                            <p>Internships</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
