--- a/index.html
+++ b/index.html
@@ -117,3 +117,39 @@
             </div>
         </div>
     </section>
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="education-timeline">
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Bachelor of Engineering - Computer Engineering</h3>
+                        <h4>Keystone School Of Engineering, Pune</h4>
+                        <span class="timeline-date">2022 - 2025</span>
+                        <p>SGPA: 9.18</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Diploma - Computer Engineering</h3>
+                        <h4>Vidyavardhini Institute of Technology, Kolhapur</h4>
+                        <span class="timeline-date">2019 - 2022</span>
+                        <p>Percentage: 83.83%</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Secondary School Certificate (SSC)</h3>
+                        <h4>Shri P. B. Patil Highschool, Kolhapur</h4>
+                        <span class="timeline-date">2018 - 2019</span>
+                        <p>Percentage: 89%</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
