added experience section

--- a/index.html
+++ b/index.html
@@ -307,3 +307,51 @@
             </div>
         </div>
     </section>
+<!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2 class="section-title">Experience</h2>
+            <div class="experience-grid">
+                <div class="experience-card">
+                    <div class="company-logo">
+                        <i class="fas fa-building"></i>
+                    </div>
+                    <h3>Web Development Intern</h3>
+                    <h4>TechnoHack EduTech</h4>
+                    <span class="experience-date">Aug 2023 - Sep 2023</span>
+                    <p>Worked on web development related tasks and gained hands-on experience in modern web technologies.</p>
+                </div>
+                <div class="experience-card">
+                    <div class="company-logo">
+                        <i class="fas fa-laptop-code"></i>
+                    </div>
+                    <h3>Web Development Intern</h3>
+                    <h4>Octanet Services Pvt. Ltd</h4>
+                    <span class="experience-date">Jan 2024 - Feb 2024</span>
+                    <p>Worked on various tasks including creating forms, landing pages, and other web development projects.</p>
+                </div>
+                <div class="experience-card">
+                    <div class="company-logo">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>Frontend Developer Intern</h3>
+                    <h4>Vibaas Technologies</h4>
+                    <span class="experience-date">Jan 2024 - Feb 2024</span>
+                    <p>Focused on front-end web development, creating responsive and user-friendly interfaces.</p>
+                </div>
+            </div>
+            <div class="achievements">
+                <h3>Achievements & Certifications</h3>
+                <div class="achievement-items">
+                    <div class="achievement-item">
+                        <i class="fas fa-trophy"></i>
+                        <span>National Level Technical Event Participation (Quiz Competition)</span>
+                    </div>
+                    <div class="achievement-item">
+                        <i class="fas fa-certificate"></i>
+                        <span>C and Embedded C Certification by Udemy</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
