--- a/index.html
+++ b/index.html
@@ -398,3 +398,13 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Amruta Maskar. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
